[package]
name = "wbl"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version = "4.5.17", features = ["derive"]}
log = "0.4.22"
num = "0.4.3"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.128"
slint = "1.7.2"
tokio = { version = "1", features = ["full"] }
eframe = "0.24"
egui = "0.24"

[build-dependencies]
slint-build = "1.7.2"
